Applying feedbacks on first chapters

--- a/manuscript.bib
+++ b/manuscript.bib
@@ -11,6 +11,24 @@
   isbn = {978-3-031-77367-9}
 }
 
+@article{aastrom2001future,
+  title = {The Future of {{PID}} Control},
+  author = {{\AA}str{\"o}m, Karl Johan and H{\"a}gglund, Tore},
+  year = 2001,
+  journal = {Control engineering practice},
+  volume = {9},
+  number = {11},
+  pages = {1163--1175},
+  publisher = {Elsevier}
+}
+
+@book{aastrom2006advanced,
+  title = {Advanced {{PID}} Control},
+  author = {{\AA}str{\"o}m, Karl Johan and H{\"a}gglund, Tore},
+  year = 2006,
+  publisher = {{ISA-The Instrumentation, Systems and Automation Society}}
+}
+
 @article{adadiPeekingBlackBoxSurvey2018,
   title = {Peeking {{Inside}} the {{Black-Box}}: {{A Survey}} on {{Explainable Artificial Intelligence}} ({{XAI}})},
   author = {Adadi, Amina and Berrada, Mohammed},
@@ -159,6 +177,15 @@
   year = 2016,
   journal = {Advances in neural information processing systems},
   volume = {29}
+}
+
+@inproceedings{bemporad2006model,
+  title = {Model Predictive Control Design: {{New}} Trends and Tools},
+  booktitle = {Proceedings of the 45th {{IEEE}} Conference on Decision and Control},
+  author = {Bemporad, Alberto},
+  year = 2006,
+  pages = {6678--6683},
+  publisher = {IEEE}
 }
 
 @article{bentley1975multidimensional,
@@ -641,6 +668,17 @@
   file = {C:\Users\uif72473\Zotero\storage\U463RZQH\Fourez et al. - 2022 - An ensemble Multi-Agent System for non-linear clas.pdf}
 }
 
+@article{francis1987linear,
+  title = {Linear Control Theory with an \textbackslash{{bfH}}\_{$\infty$} Optimality Criterion},
+  author = {Francis, Bruce A and Doyle, John C},
+  year = 1987,
+  journal = {SIAM Journal on Control and Optimization},
+  volume = {25},
+  number = {4},
+  pages = {815--844},
+  publisher = {SIAM}
+}
+
 @article{frenkel2021bottom,
   title = {Bottom-up and Top-down Neural Processing Systems Design: {{Neuromorphic}} Intelligence as the Convergence of Natural and Artificial Intelligence},
   author = {Frenkel, Charlotte Philippine and Bol, David and Indiveri, Giacomo},
@@ -694,6 +732,17 @@
   langid = {english},
   keywords = {environmental information,points of interest,smart cars,speed recommendation},
   file = {C:\Users\uif72473\Zotero\storage\UHMKJ2Q5\Galanis et al. - 2019 - Environmental-Based Speed Recommendation for Futur.pdf}
+}
+
+@article{galeani2009tutorial,
+  title = {A Tutorial on Modern Anti-Windup Design},
+  author = {Galeani, Sergio and Tarbouriech, Sophie and Turner, Matthew and Zaccarian, Luca},
+  year = 2009,
+  journal = {European Journal of Control},
+  volume = {15},
+  number = {3-4},
+  pages = {418--440},
+  publisher = {Elsevier}
 }
 
 @inproceedings{gama2004learning,
@@ -896,6 +945,17 @@
   file = {C:\Users\uif72473\Zotero\storage\9YTYDWQA\Hewing et al. - 2020 - Learning-based model predictive control Toward safe learning in control.pdf}
 }
 
+@article{hewing2020learning,
+  title = {Learning-Based Model Predictive Control: {{Toward}} Safe Learning in Control},
+  author = {Hewing, Lukas and Wabersich, Kim P and Menner, Marcel and Zeilinger, Melanie N},
+  year = 2020,
+  journal = {Annual Review of Control, Robotics, and Autonomous Systems},
+  volume = {3},
+  number = {1},
+  pages = {269--296},
+  publisher = {Annual Reviews}
+}
+
 @article{hoi2021online,
   title = {Online Learning: {{A}} Comprehensive Survey},
   author = {Hoi, Steven CH and Sahoo, Doyen and Lu, Jing and Zhao, Peilin},
@@ -1063,6 +1123,18 @@
   volume = {5},
   number = {2},
   pages = {102--119}
+}
+
+@article{kalman1961new,
+  title = {New Results in Linear Filtering and Prediction Theory},
+  author = {Kalman, Rudolph E and Bucy, Richard S},
+  year = 1961
+}
+
+@article{kalman1964linear,
+  title = {When Is a Linear Control System Optimal?},
+  author = {Kalman, Rudolf Emil},
+  year = 1964
 }
 
 @article{kamalModelPredictiveControl2012,
@@ -1650,6 +1722,17 @@
   publisher = {IEEE}
 }
 
+@article{qin2003survey,
+  title = {A Survey of Industrial Model Predictive Control Technology},
+  author = {Qin, S Joe and Badgwell, Thomas A},
+  year = 2003,
+  journal = {Control engineering practice},
+  volume = {11},
+  number = {7},
+  pages = {733--764},
+  publisher = {Elsevier}
+}
+
 @techreport{rakha2012aeris,
   title = {{{AERIS}}: {{Eco-vehicle}} Speed Control at Signalized Intersections Using {{I2V}} Communication},
   author = {Rakha, Hesham A and Kamalanathsharma, Raj Kishore and Ahn, Kyoungho and others},
@@ -1662,6 +1745,14 @@
   author = {Rawlings, James Blake and Mayne, David Q and Diehl, Moritz and others},
   year = 2017,
   journal = {Madison, WI: Nob Hill Publishing}
+}
+
+@book{rawlings2020model,
+  title = {Model Predictive Control: Theory, Computation, and Design},
+  author = {Rawlings, James Blake and Mayne, David Q and Diehl, Moritz and others},
+  year = 2020,
+  volume = {2},
+  publisher = {Nob Hill Publishing Madison, WI}
 }
 
 @article{Read2022SupervisedLF,
@@ -1826,6 +1917,17 @@
   abstract = {This tutorial introduces the reader to Gaussian process regression as an expressive tool to model, actively explore and exploit unknown functions. Gaussian process regression is a powerful, non-parametric Bayesian approach towards regression problems that can be utilized in exploration and exploitation scenarios. This tutorial aims to provide an accessible introduction to these techniques. We will introduce Gaussian processes which generate distributions over functions used for Bayesian non-parametric regression, and demonstrate their use in applications and didactic examples including simple regression problems, a demonstration of kernel-encoded prior assumptions and compositions, a pure exploration scenario within an optimal design framework, and a bandit-like exploration--exploitation scenario where the goal is to recommend movies. Beyond that, we describe a situation modelling risk-averse exploration in which an additional constraint (not to sample below a certain threshold) needs to be accounted for. Lastly, we summarize recent psychological experiments utilizing Gaussian processes. Software and literature pointers are also provided.},
   langid = {english},
   keywords = {Active learning,Bandit problems,Exploration-exploitation,Gaussian process regression}
+}
+
+@article{schwenzer2021review,
+  title = {Review on Model Predictive Control: {{An}} Engineering Perspective},
+  author = {Schwenzer, Max and Ay, Muzaffer and Bergs, Thomas and Abel, Dirk},
+  year = 2021,
+  journal = {The International Journal of Advanced Manufacturing Technology},
+  volume = {117},
+  number = {5},
+  pages = {1327--1349},
+  publisher = {Springer}
 }
 
 @article{scikit-learn,
@@ -2035,6 +2137,17 @@
   year = 1997,
   publisher = {Deliverable},
   file = {C\:\\Users\\uif72473\\Zotero\\storage\\GHAKXJRM\\project_summary2.pdf;C\:\\Users\\uif72473\\Zotero\\storage\\ZICY65GA\\Tate et al. - 1997 - Implementation scenarios.pdf}
+}
+
+@article{tinoco2025review,
+  title = {A Review of Advanced Controller Methodologies for Robotic Manipulators},
+  author = {Tinoco, V{\'\i}tor and Silva, Manuel F and Santos, Filipe N and Morais, Raul and Magalh{\~a}es, Sandro A and Oliveira, Paulo Moura},
+  year = 2025,
+  journal = {International Journal of Dynamics and Control},
+  volume = {13},
+  number = {1},
+  pages = {36},
+  publisher = {Springer Nature BV}
 }
 
 @inproceedings{titsias2009variational,
@@ -2263,6 +2376,17 @@
   pages = {1177--1193},
   publisher = {IEEE},
   isbn = {2162-237X}
+}
+
+@article{zames2003feedback,
+  title = {Feedback and Optimal Sensitivity: {{Model}} Reference Transformations, Multiplicative Seminorms, and Approximate Inverses},
+  author = {Zames, George},
+  year = 2003,
+  journal = {IEEE Transactions on automatic control},
+  volume = {26},
+  number = {2},
+  pages = {301--320},
+  publisher = {IEEE}
 }
 
 @article{zhan2021model,
